# happy-farm

./: .envrc  .gitignore  AGENTS.md  README.md  TODO.md  WORKFLOW.md  bare-root-guide.md  garden-layout.md  pyproject.toml  seed-inventory.md
community/spring-opening-2026/: plan-overview-02-28-2026.docx  plan-overview-02-28-2026.md  task-drip-tensioner-team.docx  task-drip-tensioner-team.md  task-mulch-team.docx  task-mulch-team.md  task-seedling-team.docx  task-seedling-team.md  task-sisters-garden-team.docx  task-sisters-garden-team.md  task-tool-care-team.docx  task-tool-care-team.md  task-wood-movement-team.docx  task-wood-movement-team.md
data/plans/: bed-assignments.csv  bed-grid.csv
data/plants/: flower-data.csv  (+18 more)
docs/: adr01-workspace-architecture.md  grid-builder-usage.md
farm-log/: april-2026.md
notebooks/: planting_schedule.ipynb
prompts/: extract_in_row_spacing.md  extract_johnnys_seeds_data.md
scripts/: add_harvest_columns.py  add_hyperlinks.py  build_assignments.py  calculate_succession_planting.py  convert_to_csv.py  early-planting-2025-25.md  enrich_seed_inventory.py  extract_in_row_spacing.py  extract_plant_subset.py  extract_test_sections.sh  find_missing_links.py  generate_planting_summary.py  generate_seedlings_order.py  import_gdocs.py  load_data.py  render_grid.py  scrape_plant_data.py  seed-inventory1.md  test_js_scrape.py  update_count_ft.py  view_schedule.py
tests/: test_build_assignments.py  test_calculate_succession_planting.py  test_cli_no_stacktrace.py  test_load_data.py  test_render_grid_labels.py  test_schema.py  test_waves.py
(+54 files in other folders)
